--- a/index.html
+++ b/index.html
@@ -124,6 +124,11 @@
                             </div>
                         </div>
                     </div>
+                    <div class="email-reply-box" style="margin-top:16px;display:flex;gap:8px;align-items:center;">
+                        <input id="email-reply-input" type="text" placeholder="Type your reply..." style="flex:1;padding:8px;border-radius:6px;border:1px solid #ccc;">
+                        <button id="email-reply-send" style="padding:8px 18px;border-radius:6px;background:#3a7bd5;color:#fff;border:none;cursor:pointer;">Send</button>
+                        <span id="email-reply-loader" style="display:none;margin-left:8px;"><i class="fas fa-spinner fa-spin"></i></span>
+                    </div>
                 </div>
 
                 <!-- CRM Section -->
