--- a/index.html
+++ b/index.html
@@ -149,25 +149,26 @@
                     <div class="section-header">
                         <h3>Shipping Label Assistant</h3>
                     </div>
-                    <div class="chatbot-container">
-                        <div class="chat-messages" id="chat-messages">
-                            <div class="bot-message">
-                                <div class="message-avatar">
-                                    <i class="fas fa-robot"></i>
-                                </div>
-                                <div class="message-content">
-                                    <p>Hello! I'm your Shipping Label Assistant. How can I help you today?</p>
-                                    <span class="message-time">Just now</span>
-                                </div>
+                    <div class="shipping-label-container">
+                        <form id="shipping-label-form">
+                            <div class="form-group">
+                                <label for="order-no">Order No:</label>
+                                <input type="text" id="order-no" name="order_no" required>
                             </div>
-                        </div>
-                        <div class="chat-input-container">
-                            <div class="chat-input-group">
-                                <input type="text" id="chat-input" placeholder="Type your message here..." onkeypress="handleChatKeyPress(event)">
-                                <button class="send-btn" onclick="sendChatMessage()">
-                                    <i class="fas fa-paper-plane"></i>
-                                </button>
+                            <div class="form-group">
+                                <label for="product-dimensions">Product Dimensions:</label>
+                                <input type="text" id="product-dimensions" name="product_dimensions" required>
                             </div>
+                            <div class="form-group">
+                                <label for="from-address">From Address:</label>
+                                <input type="text" id="from-address" name="from_address" required>
+                            </div>
+                            <button type="submit" class="submit-btn">Generate Shipping Label</button>
+                        </form>
+                        <div id="shipping-label-response" class="label-response"></div>
+                        <div class="label-history-section">
+                            <h4>Label History</h4>
+                            <div id="label-history-list"></div>
                         </div>
                     </div>
                 </div>
