--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                     <div class="order-history-controls">
                         <input type="text" id="order-search" placeholder="Search orders..." />
                         <button id="create-shipping-request" class="primary-action">Create Shipping Request</button>
+                        <div id="order-source-indicator" style="margin-left:12px;font-size:0.85rem;"></div>
                     </div>
                 </div>
                 <div id="order-cards" class="cards-grid"></div>
