--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
             <section id="view-customer-support" class="app-view">
                 <div class="customer-support-header" style="display:flex;flex-direction:column;gap:12px;">
                     <div id="cs-sub-bar" style="display:flex;border:1px solid #195744;border-radius:8px;overflow:hidden;width:100%;">
-                        <button type="button" class="cs-sub-btn active" data-cs="email" style="flex:1;padding:10px 0;background:#195744;color:#fff;border:none;font-weight:600;letter-spacing:.5px;cursor:pointer;">EMAIL</button>
-                        <button type="button" class="cs-sub-btn" data-cs="crm" style="flex:1;padding:10px 0;background:#ffffff;color:#195744;border:none;font-weight:600;letter-spacing:.5px;cursor:pointer;">CRM</button>
+                        <button type="button" class="cs-sub-btn active" data-cs="email" style="flex:1;padding:10px 0;">EMAIL</button>
+                        <button type="button" class="cs-sub-btn" data-cs="crm" style="flex:1;padding:10px 0;">CRM</button>
                     </div>
                     <div id="email-stats-bar" style="display:flex;gap:8px;flex-wrap:wrap;">
                         <div class="mini-stat" data-stat="total" style="background:#f4f7f6;border:1px solid #d6e3de;padding:8px 12px;border-radius:8px;display:flex;flex-direction:column;min-width:90px;">
