Shipping Request Fix

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     <div id="shipping-label-modal" style="display:none;position:fixed;top:0;left:0;width:100vw;height:100vh;background:rgba(0,0,0,0.45);z-index:2000;align-items:center;justify-content:center;">
         <div style="background:#fff;padding:32px 24px;border-radius:16px;max-width:420px;width:90vw;box-shadow:0 8px 32px rgba(58,123,213,0.18);position:relative;">
             <button id="close-shipping-label-modal" style="position:absolute;top:12px;right:12px;background:none;border:none;font-size:1.5rem;color:#888;cursor:pointer;">&times;</button>
-            <h3 style="margin-bottom:18px;color:#195744;">Create Shipping Label</h3>
+            <h3 style="margin-bottom:18px;color:#195744;">Create Shipping Request</h3>
             <form id="modal-shipping-label-form">
                 <div class="form-group">
                     <label for="modal-order-no">Order No:</label>
