--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <nav class="primary-nav">
             <button class="nav-btn" data-view="order-history" id="nav-order-history">Order History</button>
             <button class="nav-btn" data-view="shipping-requests" id="nav-shipping-requests">Shipping Requests</button>
-            <button class="nav-btn active" data-view="customer-support" id="nav-customer-support">Customer Support</button>
+            <button class="nav-btn active" data-view="customer-support" id="nav-customer-support">Channels</button>
             <button class="nav-btn" data-view="tickets" id="nav-tickets">Tickets</button>
         </nav>
 
