--- a/index.html
+++ b/index.html
@@ -20,26 +20,45 @@
                     </div>
                 </div>
             </div>
+            <div class="auth-section" id="authSection">
+                <!-- Will be populated by JavaScript -->
+            </div>
         </header>
+
+        <!-- Login Modal -->
+        <div class="login-modal" id="loginModal" style="display: none;">
+            <div class="login-form">
+                <h2>Admin Login</h2>
+                <div class="form-group">
+                    <label for="username">Username</label>
+                    <input type="text" id="username" placeholder="Enter username">
+                </div>
+                <div class="form-group">
+                    <label for="password">Password</label>
+                    <input type="password" id="password" placeholder="Enter password">
+                </div>
+                <div class="login-error" id="loginError" style="display: none;"></div>
+                <button id="loginBtn">Login</button>
+            </div>
+        </div>
 
         <!-- Primary Navigation -->
         <nav class="primary-nav">
             <button class="nav-btn" data-view="order-history" id="nav-order-history">Order History</button>
             <button class="nav-btn" data-view="shipping-requests" id="nav-shipping-requests">Shipping Requests</button>
-            <button class="nav-btn active" data-view="customer-support" id="nav-customer-support">Channels</button>
-            <button class="nav-btn" data-view="tickets" id="nav-tickets">Tickets</button>
+            <button class="nav-btn" data-view="customer-support" id="nav-customer-support">Channels</button>
+            <button class="nav-btn active" data-view="tickets" id="nav-tickets">Tickets</button>
         </nav>
 
         <!-- View Containers -->
         <main class="views-root">
             <!-- Tickets View -->
-            <section id="view-tickets" class="app-view" hidden>
+            <section id="view-tickets" class="app-view">
                 <div class="view-header">
                     <h2>Tickets</h2>
                     <div class="tickets-controls" style="display:flex;gap:12px;align-items:center;flex-wrap:wrap;">
                         <div class="tickets-stats" id="tickets-stats" style="display:flex;gap:8px;flex-wrap:wrap;"></div>
                         <div style="flex:1"></div>
-                        <button id="refresh-tickets" class="mini-btn" title="Refresh tickets"><i class="fas fa-rotate-right"></i> Refresh</button>
                         <button id="create-ticket" class="primary-action">Create Ticket</button>
                     </div>
                 </div>
@@ -59,7 +78,6 @@
                     <h2>Order History</h2>
                     <div class="order-history-controls">
                         <input type="text" id="order-search" placeholder="Search orders..." />
-                        <button id="refresh-order-history" class="mini-btn" title="Refresh orders"><i class="fas fa-rotate-right"></i> Refresh</button>
                         <button id="create-shipping-request" class="primary-action">Create Shipping Request</button>
                     </div>
                 </div>
@@ -80,7 +98,7 @@
                             <option value="cancelled">Cancelled</option>
                         </select>
                         <div style="flex:1"></div>
-                        <button id="refresh-shipping-requests" class="mini-btn" title="Refresh shipping requests"><i class="fas fa-rotate-right"></i> Refresh</button>
+                        <button id="create-shipping-request-from-shipping" class="primary-action">Create Shipping Request</button>
                     </div>
                     <div class="shipping-stats" id="shipping-stats"></div>
                 </div>
@@ -88,32 +106,11 @@
             </section>
 
             <!-- Customer Support View (existing content transplanted) -->
-            <section id="view-customer-support" class="app-view">
+            <section id="view-customer-support" class="app-view" hidden>
                 <div class="customer-support-header stack-col">
                     <div id="cs-sub-bar" class="cs-sub-bar-shell">
                         <button type="button" class="cs-sub-btn active cs-sub-btn-flex" data-cs="email">EMAIL</button>
                         <button type="button" class="cs-sub-btn cs-sub-btn-flex" data-cs="crm">CRM</button>
-                    </div>
-                    <div style="display:flex; width:100%; justify-content:flex-end; margin:6px 0 0;">
-                        <button id="refresh-customer-support" class="mini-btn" title="Refresh conversations"><i class="fas fa-rotate-right"></i> Refresh</button>
-                    </div>
-                    <div id="email-stats-bar" class="mini-stats-row">
-                        <div class="mini-stat" data-stat="total">
-                            <span class="mini-stat-label">Total</span>
-                            <strong id="cs-total" class="mini-stat-value">0</strong>
-                        </div>
-                        <div class="mini-stat" data-stat="open">
-                            <span class="mini-stat-label">Open</span>
-                            <strong id="cs-open" class="mini-stat-value">0</strong>
-                        </div>
-                        <div class="mini-stat" data-stat="closed">
-                            <span class="mini-stat-label">Closed</span>
-                            <strong id="cs-closed" class="mini-stat-value">0</strong>
-                        </div>
-                        <div class="mini-stat" data-stat="pending">
-                            <span class="mini-stat-label">Pending</span>
-                            <strong id="cs-pending" class="mini-stat-value">0</strong>
-                        </div>
                     </div>
                 </div>
                 <div class="support-panels">
